--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "tsc -d -w",
     "prepare": "npm run build",
     "prepublishOnly": "npm test",
-    "test": "ts-node test/index.ts",
+    "test": "ts-node test/index.ts | faucet",
     "lint": "eslint .",
     "lint-fix": "eslint --fix ."
   },
@@ -28,6 +28,7 @@
     "colors": "^1.3.3",
     "del": "^4.1.1",
     "get-port": "^5.0.0",
+    "json2toml": "^1.0.6",
     "lodash": "^4.17.11",
     "winston": "^3.2.1",
     "winston-null": "^2.0.0"
